Implement update text and add validations: text cannot be changed when item is done. throw exception when trying to update unknown item.

--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,9 @@
-.checkbox.checked label {
+.form-group.checked input {
     color: darkgray;
     text-decoration: line-through;
 }
 
-.new-item-input {
+.todo-item-input {
     display: inline-block;
     width: auto;
 }
