--- a/src/app/todo-footer/todo-footer.component.html
+++ b/src/app/todo-footer/todo-footer.component.html
@@ -1,5 +1,18 @@
 <footer class="footer" *ngIf="todos.length > 0">
   <span class="todo-count"><strong>{{remaining.length}}</strong> {{remaining.length == 1 ? 'item' : 'items'}} left</span>
+
+  <ul class="filters">
+    <li>
+      <a [class.selected]="filter === ''" href="" (click)="selectFilter.emit(''); false">All</a>
+    </li>
+    <li>
+      <a [class.selected]="filter === 'active'" href="" (click)="selectFilter.emit('active'); false">Active</a>
+    </li>
+    <li>
+      <a [class.selected]="filter === 'completed'" href="" (click)="selectFilter.emit('completed'); false">Completed</a>
+    </li>
+  </ul>
+
   <button class="clear-completed" *ngIf="completed.length > 0" (click)="removeCompleted.emit()">
     Clear completed
   </button>
